--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -1,11 +1,11 @@
+JavaScript:
+  name: JavaScirpt
+
 Node.JS:
   name: Node.JS
 
-tag2:
-  name: tag2
+Python:
+  name: Python
 
-tag3:
-  name: tag3
-
-tag4:
-  name: tag4
+Linux:
+  name: Linux
