--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 permalink: /:year:month:day/:title
-url: https://as950118.github.io/
+url: https://as950118.github.io
 baseurl: /project
 
 # variables
